# clearpath-health

./: .gitignore  CLAUDE.md  ClearPath_Health_Project_Plan_v2.md  README.md  pyproject.toml  requirements.txt
data/: monitor_urls.json
data/raw/: SOURCES.md
db/: schema.sql
scripts/: monitor_sites.py  print_checklist.py  seed_medicaid_qhp.py  seed_payers.py  setup_db.py
src/clearpath/: __init__.py  config.py  database.py
src/clearpath/analysis/: __init__.py
src/clearpath/collectors/: __init__.py
src/clearpath/reports/: __init__.py
tests/: __init__.py
